2003-12-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: basic checking of ID validity.  Throw a
	ParseException when mixing languages.

2003-11-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* PageCompiler.cs: assign LCID, Culture and/or UICulture in
	FrameworInitialize() if provided in @Page.

	Fixes bug #51511.

2003-11-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateControlCompiler.cs: support for expressions of
	System.Drawing.Size type. Allow getting Color from comma separated
	numbers, which is not allowed by ColorConverter.

	This makes http://www.codeproject.com/aspnet/asppopup.asp work.

2003-11-13  Jackson Harper <jackson@ximian.com>

	* PageCompiler.cs: Call InitOutputCache when the OutputCache
	directive is set.
	
2003-11-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: use fileEncoding from configuration files.

	* PageCompiler.cs: add assign statements for ContentType,
	ResponseEncoding and CodePage if supplied.

2003-10-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateControlCompiler.cs: fix bug #42994. Now we don't generate
	a return statement for user controls with 'void' return type.

2003-10-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspParser.cs: fixed bug #49627.

2003-10-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseCompiler.cs: now gets the CodeCompiler from configuration files.

2003-10-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Directive.cs: new attribute for @Page directive in 1.1.

2003-10-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspParser.cs:
	* TagAttributes.cs: allow duplicated runat=server attributes and display
	error page when duplicated attributes and runat is specified.

2003-10-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspTokenizer.cs: moved token numbers above unicode.

2003-09-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: don't process code render tags inside scripts. Check